gl400dir = $(datadir)/gxsm3/gl-400

gl400_DATA = \
	g3d-allshader-uniforms.glsl \
	s3d-vertex.glsl s3d-fragment.glsl \
	tess-vertex.glsl tess-control.glsl tess-evaluation.glsl tess-geometry.glsl tess-fragment.glsl \
	ico-vertex.glsl ico-control.glsl ico-evaluation.glsl ico-geometry.glsl ico-fragment.glsl 
