install_data(
    sources: [
        'gxsm4-icon.svg',
        'gxsm4-splash.svg',
        'gxsm-icon.svg',
        'approach-symbolic.svg',
        'arrow-down-symbolic.svg',
        'arrow-left-symbolic.svg',
        'arrow-right-symbolic.svg',
        'arrow-up-symbolic.svg',
        'double-arrow-down-symbolic.svg',
        'double-arrow-left-symbolic.svg',
        'double-arrow-right-symbolic.svg',
        'double-arrow-up-symbolic.svg',
        'dummy-symbolic.svg',
        'edit-delete-symbolic.svg',
        'goto-center-symbolic.svg',
        'goto-home-symbolic.svg',
        'goto-position-symbolic.svg',
        'GTK4-Demo.svg',
        'list-add-symbolic.svg',
        'list-remove-symbolic.svg',
        'media-playback-pause-symbolic.svg',
        'media-record-symbolic.svg',
        'preferences-system-details-symbolic.svg',
        'process-stopall-symbolic.svg',
        'retract-symbolic.svg',
        'seek-backward-symbolic.svg',
        'seek-forward-symbolic.svg',
        'seek-left-symbolic.svg',
        'seek-right-symbolic.svg',
        'system-busy-symbolic.svg',
        'system-off-symbolic.svg',
        'system-run-symbolic.svg',
        'system-search-symbolic.svg',
        'system-shutdown-symbolic.svg',
        'utilities-system-monitor-symbolic.svg',
        'window-close-symbolic.svg',
        'xymode-symbolic.svg',
    ],
#    install_dir : get_option('datadir') / 'gxsm4/icons'
    install_dir : get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
)
